2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 573087 – gdkwindow.c: {x,y}_offset used uninitialized

	* gdk/gdkwindow.c (gdk_window_clear_backing_rect_redirect):
	Don't use uninitialized vars.
	Fix offsets for redirected pixmap, draw to pixmap not window.

2009-03-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Bug 457086 - numpad does not work when the Thai-Lao input method is
	used

	* modules/input/gtkimcontextthai.c (is_context_lost_key): Do not count
	character-generating keypads as context-lost keys. (patch recommitted
	after approval)

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkkeysyms.h: Fix the sorting of GDK_KP_Equal.

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 552619 – File Chooser no longer automatically enters newly created
	directories

	* gtk/gtkfilechooserdefault.c (edited_idle_cb): Switch to the newly
	created folder on success.

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 573515 – po-properties/ special Makefile.in.in handling causes
	failure to build

	* configure.in: Generate po-properties/POTFILES at configure time.
	Patch by Loïc Minier

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/appwindow.c: Set the program-name property
	of the about dialog.

	* docs/tools/widgets.c: Add GtkAboutDialog

2009-02-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 572273 – No replacement documented for gtk_action_connect_proxy()

	* gtk/gtkaction.c: Make gtk-doc pick up deprecation notes.
	Insisted on by Andre Klapper.

2009-02-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 573287 – Warning on startup

	* gtk/gtkstatusicon.c (gtk_status_icon_finalize): Disconnect
	all tray icon signals. Noticed by Bastien Nocera

2009-02-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 573211 – Setting screen for popup windows

	* gtk/gtkentrycompletion.c:
	* gtk/gtknotebook.c: Keep popups on the right screen.
	Pointed out by Morten Welinder

2009-02-28  Matthias Clasen  <mclasen@redhat.com>
